plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/newExpressionWithoutName.java
// IGNORE_K2
class Test {
    public static void main(String[] args) {
        Object x = new ;
    }
}